# QuickNotesAI

./: .gitignore  CHANGELOG.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  run_app.sh
.streamlit/: config.toml
assets/: components.css  sidebar.css  style.css
data/: meetings.db
data/vector_store/: documents.pkl  faiss.index
records/text/: preamble.txt
src/: __init__.py  action_extractor.py  audio_recorder.py  controller.py  database.py  email_service.py  export_utils.py  rag_engine.py  summarizer.py  transcription.py
src/ui/: components.py  dashboard.py  record.py  sidebar.py
uploads/: New Recording 7.m4a
