[tool.poetry]
name = "meeting-summaries"
version = "0.1.0"
description = "A tool to generate summaries of group meetings using Whisper and Gemma models."
authors = ["Francisco J. Palmero Moya <franciscopalmeromoya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
speechrecognition = "^3.10.4"
ollama = "^0.2.1"
openai-whisper = "^20231117"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
